--- a/modulo III/AppAngular/src/app/comum/footer/footer.component.html
+++ b/modulo III/AppAngular/src/app/comum/footer/footer.component.html
@@ -1,1 +1,5 @@
-<footer class="footer">2020</footer>
+<footer class="bg-dark fixed-bottom footer">
+    <div>
+        <p class="text-white">APP - 2020</p>
+    </div>
+</footer>
