add imagem produtos

--- a/modulo III/AppAngular/src/app/comum/nao-encontrada/nao-encontrada.component.html
+++ b/modulo III/AppAngular/src/app/comum/nao-encontrada/nao-encontrada.component.html
@@ -1,8 +1,6 @@
-<p>nao-encontrada works!</p>
-<p>nao-encontrada works!</p>
-<p>nao-encontrada works!</p>
-<p>nao-encontrada works!</p>
-<p>nao-encontrada works!</p>
-<p>nao-encontrada works!</p>
-<p>nao-encontrada works!</p>
-<p>nao-encontrada works!</p>
+<div class="container main-container">
+    <div class="text-center">
+        <h1>404!</h1>
+        <p class="lead">Página não encontrada!</p>
+    </div>
+</div>
