--- a/modulo III/AppAngular/src/app/paginas/contato/contato.component.html
+++ b/modulo III/AppAngular/src/app/paginas/contato/contato.component.html
@@ -1,20 +1,44 @@
-<h3>é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu
-    não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou
-    a ser integrado a softwares de editoração eletrônica como Aldus PageMake</h3>
+<div class="container main-container">
 
-<form>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-    <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    <header class="jumbotron">
+        <h1 class="display-4">Contato</h1>
+        <p class="lead">Rua Hilda Del Nero Bisquolo, 102 - 25º Andar - Sala 2508 Jardim Florida, Jundiaí - SP, 13208-703</p>
+    </header>
+
+    <form>
+        <div class="row row-sm-offset">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label>Nome</label>
+                    <input type="text" class="form-control">
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" class="form-control">
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label>Telefone</label>
+                    <input type="tel" class="form-control">
+                </div>
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            <label>Mensagem</label>
+            <textarea type="tel" class="form-control">
+                
+            </textarea>
+        </div>
+
+        <button type="submit" class="btn btn-success">Submit</button>
+    </form>
+
+
+</div>
