--- a/modulo III/AppAngular/src/app/comum/menu/menu.component.html
+++ b/modulo III/AppAngular/src/app/comum/menu/menu.component.html
@@ -1,17 +1,30 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" [routerLink]="['/home']">APP</a>
+        <a class="navbar-brand" [routerLink]="['/home']">
+            <i class="fa fa-home" aria-hidden="true"></i> APP
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/produtos']">Produtos</a>
+                    <a class="nav-link" [routerLink]="['/data-binding']">
+                        <i class="fa fa-hand-spock-o" aria-hidden="true"></i> DataBinding
+                    </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/contato']">Contato</a>
+                    <a class="nav-link" [routerLink]="['/produtos']">
+                        <i class="fa fa-picture-o" aria-hidden="true"></i> Produtos
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/contato']">
+                        <i class="fa fa-bullhorn" aria-hidden="true"></i> Contato
+                    </a>
                 </li>
             </ul>
         </div>
