--- a/modulo III/AppAngular/src/app/paginas/lista-produtos/lista-produtos.component.html
+++ b/modulo III/AppAngular/src/app/paginas/lista-produtos/lista-produtos.component.html
@@ -1,38 +1,49 @@
-<div class="container">
+<div class="container main-container">
 
-    <div class="row">
-        <div class="col-sm">
+    <div class="row text-center">
 
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+
+        <div *ngFor="let produto of listaProdutos" class="col-md-4" style="padding-bottom: 30px;">
+            <div class="card h-100">
+                <a class="text-decoration-none">
+                    <div style="align-content:center; padding-top: 30px;">
+                        <img src="/assets/{{produto.imagem}}" height="164px" width="253px">
+                    </div>
+                </a>
+
+                <h4 class="card-title">{{produto.descricao | titlecase}}</h4>
+
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+
+                    <div [ngSwitch]="produto.promocao">
+                        <p *ngSwitchCase="true">Promoção:</p>
+                        <p *ngSwitchCase="false">Por apenas:</p>
+                    </div>
+
+                    <div *ngIf="produto.promocao">
+                        <h4>
+                            <small>
+                                <del>{{produto.preco | currency:'BRL':symbol:'1.2-2':'pt'}}</del>
+                            </small>
+                            <p> {{produto.precoPromocao | currency:'BRL':symbol:'1.2-2':'pt'}}</p>
+                        </h4>
+                    </div>
+
+                    <div *ngIf="!produto.promocao">
+                        <h4>{{produto.preco | currency:'BRL':symbol:'1.2-2':'pt'}}</h4>
+                    </div>
+                </div>
+
+                <div class="card-footer">
+                    <a class="btn btn-success text-white">
+                        <span class="fa fa-shopping-cart"></span> Comprar
+                    </a>
                 </div>
             </div>
+        </div>
 
-        </div>
-        <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
+
+
     </div>
 
 </div>
