--- a/modulo III/AppAngular/src/app/comum/menu/menu.component.html
+++ b/modulo III/AppAngular/src/app/comum/menu/menu.component.html
@@ -10,6 +10,12 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/cadastro']">
+                        <i class="fa fa-hand-spock-o" aria-hidden="true"></i> Cadastro
+                    </a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/data-binding']">
                         <i class="fa fa-hand-spock-o" aria-hidden="true"></i> DataBinding
                     </a>
