--- a/modulo III/ProjetoFinal/src/app/paginas/fornecedores/fornecedores-lista/fornecedores-lista.component.html
+++ b/modulo III/ProjetoFinal/src/app/paginas/fornecedores/fornecedores-lista/fornecedores-lista.component.html
@@ -44,9 +44,9 @@
                                 <i class="fa fa-pencil" aria-hidden="true"></i>&nbsp;Editar
                             </a>
                             &nbsp;
-                            <a class="btn btn-outline-danger">
+                            <button class="btn btn-outline-danger" (click)="apagar(f.id)">
                                 <i class="fa fa-trash" aria-hidden="true"></i>&nbsp;Apagar
-                            </a>
+                            </button>
                         </span>
                     </td>
                 </tr>
