--- a/modulo III/ProjetoFinal/src/app/paginas/produtos/produtos-formulario/produtos-formulario.component.html
+++ b/modulo III/ProjetoFinal/src/app/paginas/produtos/produtos-formulario/produtos-formulario.component.html
@@ -1,1 +1,118 @@
-<p>produtos-formulario works!</p>
+<div class="card">
+    <div class="card-header">
+        <div class="float-left">
+            <h4>{{titulo}}</h4>
+        </div>
+    </div>
+
+    <div class="card-body">
+        <form [formGroup]="formulario" (ngSubmit)="salvar()">
+
+            <div class="alert alert-danger" *ngIf="errors.length > 0">
+                <ul>
+                    <li *ngFor="let erro of errors">
+                        {{erro}}
+                    </li>
+                </ul>
+            </div>
+
+            <div class="form-row">
+
+                <div class="form-group col-md-6">
+                    <label>Fornecedor</label>
+                    <select class="form-control" formControlName="fornecedorId" [ngClass]="{'is-invalid': displayMessage.fornecedorId }">
+                        <option 
+                        *ngFor="let fornecedor of fornecedores" 
+                        value="{{fornecedor.id}}"
+                        >{{fornecedor.nome}}
+                    </option>
+                    </select>
+
+                    <span class="text-danger" *ngIf="displayMessage.fornecedorId">
+                        <p [innerHTML]="displayMessage.fornecedorId"></p>
+                    </span>
+                </div>
+
+
+
+                <div class="form-group col-md-4">
+                    <label>Nome</label>
+                    <input type="text" class="form-control" formControlName="nome" [ngClass]="{'is-invalid': displayMessage.nome }">
+
+                    <span class="text-danger" *ngIf="displayMessage.nome">
+                        <p [innerHTML]="displayMessage.nome"></p>
+                    </span>
+                </div>
+
+                <div class="form-group col-md-2">
+                    <label>Ativo?</label>
+                    <div class="form-group form-check">
+                        <label class="form-check-label">
+                          <input 
+                            formControlName="ativo" 
+                            class="form-check-input" 
+                            type="checkbox"> Sim
+                        </label>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+            <div class="form-row">
+                <div class="form-group col-md-6" *ngIf="!produto?.id">
+
+                    <label class="btn btn-outline-primary btn-block" style="margin-top:38px;">Imagem produto
+                        <input hidden type="file" 
+                        #image
+                         accept="image/*"  
+                        (change)="handleFileInput($event.target.files)"
+                         class="custom-file-input "
+                         >
+                    </label>
+                </div>
+
+
+                <div class="form-group col-md-4">
+                    <label>Valor</label>
+                    <input type="text" class="form-control" formControlName="valor" [ngClass]="{'is-invalid': displayMessage.valor }" />
+                    <span class="text-danger" *ngIf="displayMessage.valor">
+                    <p [innerHTML]="displayMessage.valor"></p>
+                </span>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label>Descrição</label>
+                    <textarea formControlName="descricao" cols="40" rows="5" class="form-control" formControlName="descricao" [ngClass]="{'is-invalid': displayMessage.descricao }">
+                    
+                </textarea>
+
+                    <span class="text-danger" *ngIf="displayMessage.descricao">
+                    <p [innerHTML]="displayMessage.descricao"></p>
+                </span>
+                </div>
+            </div>
+
+
+
+
+            <div class="float-left">
+                <button (click)="voltar()" class="btn btn-warning ml-2">
+                    <i class="fa fa-chevron-left" aria-hidden="true"></i>&nbsp;Voltar
+                </button>
+            </div>
+
+            <div class="float-right">
+                <button class="btn btn-success" [disabled]="!formulario.valid || clickSalvar">
+                    <i *ngIf="!clickSalvar" class="fa fa-floppy-o" aria-hidden="true"></i>
+                    <i *ngIf="clickSalvar" class="fa fa-refresh fa-spin" aria-hidden="true"></i>
+                    &nbsp;Salvar
+                </button>
+            </div>
+
+        </form>
+    </div>
+</div>
