--- a/modulo III/ProjetoFinal/src/app/paginas/fornecedores/fornecedores-lista/fornecedores-lista.component.html
+++ b/modulo III/ProjetoFinal/src/app/paginas/fornecedores/fornecedores-lista/fornecedores-lista.component.html
@@ -14,6 +14,15 @@
 
     </div>
     <div class="card-body">
+
+        <div class="alert alert-danger" *ngIf="errors.length > 0">
+            <ul>
+                <li *ngFor="let erro of errors">
+                    {{erro}}
+                </li>
+            </ul>
+        </div>
+
         <table class="table table-striped">
             <thead>
                 <tr>
